# Django-Basic-Project

./: .gitignore  Makefile  README.md  example.env  pyproject.toml
apps/: urls.py
apps/api/: Makefile
apps/api/v1/: urls.py
apps/api/v1/main/: apps.py  urls.py  views.py
core/: asgi.py  urls.py
core/settings/: base.py  dev.py  prod.py
server/: gunicorn.conf.py  site.nginx.conf  site.supervisor.conf
